fix invisible layer editable

--- a/src/components/layer/Layer.module.scss
+++ b/src/components/layer/Layer.module.scss
@@ -19,6 +19,7 @@
   }
   &.invisible {
     opacity: 0;
+    pointer-events: none;
   }
   &.mincho {
     font-family: "游明朝体", "Yu Mincho", YuMincho, "Hiragino Kaku Gothic ProN",
